[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["achtest"]

[project]
name = "achtest"
version = "0.1.0"
description = "ErvraLab — Achromaticity falsification & bounding (ACHTEST)"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

